--- a/package.json
+++ b/package.json
@@ -1,29 +1,64 @@
 {
-  "name": "assemblyre",
-  "version": "0.0.1",
-  "description": "Editor environment for creating pseudo-programs",
-  "main": "server.js",
-  "scripts": {
-    "start": "npm run compile && node server.js",
-    "compile": "browserify -t vueify -e src/main.js -o public/build.js"
-  },
-  "dependencies": {
-    "express": "^4.18.1",
-    "browserify": "^17.0.0",
-    "vueify": "^9.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-core": "^6.26.3",
-    "vue": "2.6.8",
-    "vue-template-compiler": "2.5.15",
-    "interactjs": "1.10.11",
-    "marked": "4.0.16",
-    "dompurify": "2.3.8"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express",
-    "vue"
-  ]
+    "name": "assemblyre",
+    "version": "0.0.1",
+    "description": "Editor environment for creating pseudo-programs",
+    "main": "server.js",
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
+    },
+    "dependencies": {
+        "core-js": "^3.8.3",
+        "vue": "^2.6.14",
+        "babel-core": "^6.26.3",
+        "babel-preset-es2015": "^6.24.1",
+        "browserify": "^17.0.0",
+        "dompurify": "2.3.8",
+        "express": "^4.18.1",
+        "interactjs": "1.10.11",
+        "lodash.uniqueid": "^4.0.1",
+        "lodash.sample": "^4.2.1",
+        "marked": "4.0.16",
+        "vueify": "^9.4.1"
+    },
+    "license": "MIT",
+    "keywords": [
+        "node",
+        "glitch",
+        "express",
+        "vue"
+    ],
+    "devDependencies": {
+        "@babel/core": "^7.18.2",
+        "@babel/eslint-parser": "^7.12.16",
+        "@babel/plugin-proposal-class-properties": "^7.17.12",
+        "@babel/plugin-transform-runtime": "^7.18.2",
+        "@babel/preset-env": "^7.18.2",
+        "@vue/cli-plugin-babel": "^5.0.0",
+        "@vue/cli-plugin-eslint": "^5.0.0",
+        "@vue/cli-service": "^5.0.0",
+        "eslint": "^7.32.0",
+        "eslint-plugin-vue": "^8.0.3",
+        "vue-template-compiler": "^2.6.14"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "@babel/eslint-parser"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
