--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.8.3",
-        "vue": "^2.6.14",
         "babel-core": "^6.26.3",
         "babel-preset-es2015": "^6.24.1",
         "browserify": "^17.0.0",
+        "core-js": "^3.8.3",
+        "dom-to-image": "^2.6.0",
         "dompurify": "2.3.8",
         "express": "^4.18.1",
         "interactjs": "1.10.11",
-        "lodash.uniqueid": "^4.0.1",
         "lodash.sample": "^4.2.1",
+        "lodash.uniqueid": "^4.0.1",
         "marked": "4.0.16",
-        "vueify": "^9.4.1",
-        "p5": "1.4.1"
+        "p5": "1.4.1",
+        "vue": "^2.6.14",
+        "vueify": "^2.0.1"
     },
     "license": "MIT",
     "keywords": [
