--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "babel-core": "^6.26.3",
-        "babel-preset-es2015": "^6.24.1",
         "browserify": "^17.0.0",
         "core-js": "^3.8.3",
-        "dom-to-image": "^2.6.0",
         "dompurify": "2.3.8",
         "express": "^4.18.1",
         "interactjs": "1.10.11",
@@ -22,7 +19,8 @@
         "marked": "4.0.16",
         "p5": "1.4.1",
         "vue": "^2.6.14",
-        "vueify": "^2.0.1"
+        "vue-router": "^3.5.4",
+        "vueify": "^9.4.1"
     },
     "license": "MIT",
     "keywords": [
