--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "browserify": "^17.0.0",
     "core-js": "^3.25.5",
+    "dom-to-image-more": "^2.12.0",
     "dompurify": "^2.4.0",
     "express": "^4.18.2",
     "interactjs": "^1.10.17",
@@ -41,10 +42,10 @@
     "@vue/cli-service": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
-    "vueify": "^2.0.1"
+    "vue-template-compiler": "^2.6.14",
+    "vueify": "^9.4.1"
   },
   "eslintConfig": {
     "root": true,
